<resources>
    <string name="app_name">Blink</string>
    <string name="login">Einloggen</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="title_activity_deliverer_main">DelivererMain</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.
    </string>
    <string name="title_activity_customer_main">CustomerMain</string>
    <string name="title_home">Start</string>
    <string name="title_cart">Warenkorb</string>
    <string name="title_profile">Profil</string>
    <string name="add_to_cart">In den Warenkorb</string>
    <string name="product_information">Produktinformationen</string>
    <string name="recently_bought">Zuletzt gekauft</string>
    <string name="categories">Kategorien</string>
    <string name="search">Suche</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Category">Kategorie</string>
    <string name="Supplier">Anbieter</string>
    <string name="suppliers">Anbieter</string>
    <string name="sortOrder">Sortierung</string>
    <string name="NameAZ">Produktname A-Z</string>
    <string name="NameZA">Produktname Z-A</string>
    <string name="Price09">Preis 0–9</string>
    <string name="Price90">Preis 9–0</string>
    <string name="SortingAZ">Sortierung: Name A-Z</string>
    <string name="Sorting90">Sortierung: Preis 9–0</string>
    <string name="Sorting09">Sortierung: Preis 0–9</string>
    <string name="SortingZA">Sortierung: Name Z-A</string>
    <string name="count">Anzahl</string>
    <string name="added_to_cart">Hinzugefügt</string>
    <string name="remove">Entfernen</string>
    <string name="orders">Bestellungen</string>
    <string name="products">Produkte</string>
    <string name="productName">Produktname</string>
    <string name="price">Preis</string>
    <string name="description">Beschreibung</string>
    <string name="add_product">Produkt hinzufügen</string>
    <string name="category">Kategorie</string>
    <string name="checkout">Zur Kasse</string>
    <string name="sum">"Summe: "</string>
    <string name="remove_from_cart">remove_from_cart</string>
    <string name="product_added">Produkt hinzugefügt</string>
    <string name="your_product_was_added">Ihr Produkt wurde hinzugefügt.</string>
    <string name="back_to_products">Zurück zu den Produkten</string>
    <string name="delete">Entfernen</string>
    <string name="new_product">Neues Produkt</string>
    <string name="delete_product">Produkt löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="middle_dot_with_spaces">&#160;·&#160;</string>
    <string name="shipping_method">Versandmethode</string>
    <string name="payment_method">Bezahlmethode</string>
    <string name="delivery">Lieferung</string>
    <string name="pick_up">Abholung</string>
    <string name="ec_card">EC-Karte</string>
    <string name="cash">Bar</string>
    <string name="heypay">HeyPay</string>
    <string name="complete_order">Bestellung abschließen</string>
    <string name="your_order_was_submitted">Ihre Bestellung wurde eingereicht.</string>
    <string name="to_orders">Zur Bestellübersicht</string>
    <string name="title_orders">Bestellungen</string>
    <string name="submitted">Eingereicht</string>
    <string name="readyForPickup">Bereit zur Abholung</string>
    <string name="accepted">Auftrag angenommen</string>
    <string name="completed">Abgeschlossen</string>
    <string name="order_number">Bestellung #</string>
    <string name="markAsReady">Als bereit markieren</string>
    <string name="complete">Abschließen</string>
    <string name="acceptOrder">Auftrag annehmen</string>
    <string name="auftraege">Aufträge</string>
    <string name="notasks">Keine Aufträge</string>
    <string name="noOrders">Keine Bestellungen</string>
    <string name="noFav">Kein Favorit</string>
    <string name="Fav">Favorit</string>
    <string name="favorites">Favoriten</string>
    <string name="noFavs">Keine Favoriten</string>
    <string name="warenkorb_leer">Warenkorb leer</string>
    <string name="zu_favoriten_hinzufuegen">Zu Favoriten hinzufügen</string>
    <string name="aus_favoriten_entfernen">Aus Favoriten entfernen</string>
</resources>