<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.customer.CheckoutFragment">

    <RadioGroup
        android:id="@+id/shippingMethodRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_method"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <RadioButton
            android:id="@+id/radioPickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/self_pick_up"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioDeliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/paymentMethodRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <RadioButton
            android:id="@+id/radioCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ec_card"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/radioHeyPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heypay" />
    </RadioGroup>

    <Button
        android:id="@+id/completeOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/complete_order" />

</LinearLayout>