<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.blink.ui.customer.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_customer_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.blink.ui.customer.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_customer_profile" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.blink.ui.customer.home.HomeFragment"
        android:label="Start"
        tools:layout="@layout/fragment_customer_home">
        <action
            android:id="@+id/action_navigation_home_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.blink.ui.ProductDetailsFragment"
        android:label="Produkt"
        tools:layout="@layout/fragment_product_details" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.blink.ui.customer.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_customer_search" >
        <action
            android:id="@+id/action_navigation_search_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

</navigation>