<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.customer.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/orderChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SortingAZ"
                    app:closeIcon="@drawable/baseline_arrow_drop_down_24"
                    app:closeIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/categoryFilterChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Category"
                    app:closeIcon="@drawable/baseline_arrow_drop_down_24"
                    app:closeIconVisible="true"
                    android:checkable="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/supplierFilterChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Supplier"
                    app:closeIcon="@drawable/baseline_arrow_drop_down_24"
                    app:closeIconVisible="true"
                    android:checkable="true"/>

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>